--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-multiple-select": "^0.4.4",
+    "react-native-selectmultiple-button": "^0.1.105",
     "react-native-step-indicator": "0.0.9",
+    "react-native-swiper": "^1.5.14",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
